--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/lodash": "^4.14.68",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
+    "material-design-icons": "^3.0.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
